--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,15 +12,15 @@
 		<link href="asserts/css/signin.css" th:href="@{/asserts/css/signin.css}" rel="stylesheet">
 	</head>
 	<body class="text-center">
-		<form class="form-signin" action="dashboard.html" th:action="@{/user/login2}" method="post">
+		<form class="form-signin" action="dashboard.html" th:action="@{/user/login}" method="post">
 			<img class="mb-4" th:src="@{/asserts/img/nav_logo.png}" src="/asserts/img/nav_logo.png" alt="" width="72" height="72">
 			<h1 class="h3 mb-3 font-weight-normal" th:utext="#{login.systemname}">newcapec employee attendance sys v1.0</h1>
 			<!--判断-->
 			<p style="color: red" th:text="${msg}" th:if="${not #strings.isEmpty(msg)}"></p>
 			<label class="sr-only" th:text="#{login.username}">Username</label>
-			<input type="text"  name="username" class="form-control" placeholder="Username" th:placeholder="#{login.username}" required="" autofocus="">
+			<input type="text"  name="username" class="form-control" placeholder="Username" th:placeholder="#{login.username}" required="" autofocus="" value="160571">
 			<label class="sr-only" th:text="#{login.password}">Password</label>
-			<input type="password" name="pwd" class="form-control" placeholder="Password" th:placeholder="#{login.password}" required="">
+			<input type="password" name="pwd" class="form-control" placeholder="Password" th:placeholder="#{login.password}" required="" value="newcapec">
 			<div class="checkbox mb-3">
 				<label>
           			<input type="checkbox" value="remember-me"/> [[#{login.remember}]]
